--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.ts",
+    "migrate": "dotenv -e environments/.env.development -- npx prisma migrate dev ",
+    "migrate:docker": "dotenv -e environments/.env.docker.dev -- npx prisma migrate dev",
+    "dev": "cross-env NODE_ENV=DEVELOPMENT  nodemon src/index.ts",
+    "start": "cross-env NODE_ENV=PRODUCTION nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
+    "morgan": "^1.10.0",
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "5.9.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.4",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
   }
