--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@prisma/client": "5.9.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.4",
