--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.19",
     "morgan": "^1.10.0",
     "prisma": "^5.9.1",
@@ -35,7 +37,9 @@
     "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
