--- a/environments/.env.development
+++ b/environments/.env.development
@@ -11,3 +11,8 @@ NODE_PORT=3500
 ACCESS_SECRET_TOKEN="123456789"
 #token de refresco
 REFRESH_SECRET_TOKEN="123456"
+
+#CREDENTIALS CLOUNDINARY
+CLOUDINARY_CLOUD_NAME="diezbbktu"
+CLOUDINARY_API_KEY="145379972172437"
+CLOUDINARY_API_SECRET="s3hUQ5aSQYk0LMHKOfCn8UpTpKM"
