--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
