Co-authored-by: pedromolina17 <PedroMolina17@users.noreply.github.com>

--- a/environments/.env.development
+++ b/environments/.env.development
@@ -11,7 +11,8 @@ NODE_PORT=3500
 ACCESS_SECRET_TOKEN="123456789"
 #token de refresco
 REFRESH_SECRET_TOKEN="123456"
-
+#url base api
+BASE_URL="http://localhost:3500/api"
 #CREDENTIALS CLOUNDINARY
 CLOUDINARY_CLOUD_NAME="diezbbktu"
 CLOUDINARY_API_KEY="145379972172437"
