--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,10 @@
     "react-icons": "^5.0.1",
     "react-responsive-pagination": "^2.4.1",
     "react-router-dom": "^6.22.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "sweetalert2": "^11.10.5",
+    "sweetalert2-react-content": "^5.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/prop-types": "^15.7.11",
