--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ web_modules/
 
 # dotenv environment variable files
 environments/
-*.env
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
