--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sharp": "^0.33.2"
   }
 }
