--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-responsive-pagination": "^2.4.1",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.10.5",
     "sweetalert2-react-content": "^5.0.7",
     "zustand": "^4.5.2"
