--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.19",
+    "@types/node-cron": "^3.0.11",
     "morgan": "^1.10.0",
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
@@ -47,6 +48,7 @@
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.5"
