--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express-validator": "^7.0.1",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.9",
     "multer": "1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
