--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -31,6 +34,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/prop-types": "^15.7.11",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
