--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-responsive-pagination": "^2.4.1",
     "react-router-dom": "^6.22.1",
